Layout atualizado conforme a página oficial do Instagram

--- a/index.html
+++ b/index.html
@@ -5,38 +5,159 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="shortcut icon" type="image/x-icon" href="./img/instagram-icon.ico">
-    <title>Instagram</title>
+    <title>Meu insta</title>
 </head>
 <body>
-    <div class="instagram-wrapper">
-        <div class="instagram-phone">
-            <img src="./img/instagram-celular.png" alt="celular">
-        </div>
-        <div class="instagram-continue">
-            <div class="group">
+    <main>
+        <article class="instagram-wrapper">
+            <div class="instagram-phone">
+                <img>
+                <div id="screen-set">
+                    <img src="./img/screen_1.jpg" alt="screen1" class="screen">
+                    <img src="./img/screen_2.jpg" alt="screen2" class="screen">
+                    <img src="./img/screen_3.jpg" alt="screen3" class="screen">
+                    <img src="./img/screen_4.jpg" alt="screen4" class="screen">
+                    <img src="./img/screen_5.jpg" alt="screen5" class="screen">
+                </div>
+            </div>
+            <div class="instagram-continue">
                 <img src="./img/instagram-logo.png" class="instagram-logo" alt="instagram logo">
                 <div class="profile-photo">
                     <img src="./img/perfil-instagram.jpg" alt="foto de perfil">
                 </div>
-                <a href="#" class="instagram-login">Continue como nereu_melo</a>
-                <a href="#" class="instagram-logout">Remover conta</a>
+                <div class="continue-button">
+                    <button href="#" class="instagram-login">
+                        <div class="continue-text">
+                            Continue as nereu_melo
+                        </div>
+                    </button>
+                </div>
+                <div class="not-account">
+                    Not nereu_melo?
+                    <a href="#" class="instagram-logout">Switch accounts</a>
+                </div>
             </div>
-            <div class="group">
-                <p class="not-account">Não é nereu_melo?</p>
-                <p class="not-account">
-                    <span class="link-blue">Alternar contar</span>
-                    ou
-                    <span class="link-blue">Inscreva-se</span>
-                </p>
+        </article>
+    </main>
+    <footer class="instagram-footer">
+        <div class="footer-content">
+            <div class="footer-links">
+                <div class="link">
+                    <a href="http://" target="_blank" rel="noopener noreferrer">
+                        <div class="link-text">About</div>
+                    </a>
+                </div>
+                <div class="link">
+                    <a href="http://" target="_blank" rel="noopener noreferrer">
+                        <div class="link-text">Blog</div>
+                    </a>
+                </div>
+                <div class="link">
+                    <a href="http://" target="_blank" rel="noopener noreferrer">
+                        <div class="link-text">Jobs</div>
+                    </a>
+                </div>
+                <div class="link">
+                    <a href="http://" target="_blank" rel="noopener noreferrer">
+                        <div class="link-text">Help</div>
+                    </a>
+                </div>
+                <div class="link">
+                    <a href="http://" target="_blank" rel="noopener noreferrer">
+                        <div class="link-text">API</div>
+                    </a>
+                </div>
+                <div class="link">
+                    <a href="http://" target="_blank" rel="noopener noreferrer">
+                        <div class="link-text">Privacy</div>
+                    </a>
+                </div>
+                <div class="link">
+                    <a href="http://" target="_blank" rel="noopener noreferrer">
+                        <div class="link-text">Terms</div>
+                    </a>
+                </div>
+                <div class="link">
+                    <a href="http://" target="_blank" rel="noopener noreferrer">
+                        <div class="link-text">Top Accounts</div>
+                    </a>
+                </div>
+                <div class="link">
+                    <a href="http://" target="_blank" rel="noopener noreferrer">
+                        <div class="link-text">Hashtags</div>
+                    </a>
+                </div>
+                <div class="link">
+                    <a href="http://" target="_blank" rel="noopener noreferrer">
+                        <div class="link-text">Locations</div>
+                    </a>
+                </div>
             </div>
-            <div class="get-the-app">
-                <p class="get-app">Baixe o aplicativo</p>
-                <div class="download">
-                    <a href="#" class="app-download"></a>
-                    <a href="#" class="app-download"></a>
+            <div class="footer-links">
+                <div class="link">
+                    <a href="http://" target="_blank" rel="noopener noreferrer">
+                        <div class="link-text">Beauty</div>
+                    </a>
+                </div>
+                <div class="link">
+                    <a href="http://" target="_blank" rel="noopener noreferrer">
+                        <div class="link-text">Dance & Performance</div>
+                    </a>
+                </div>
+                <div class="link">
+                    <a href="http://" target="_blank" rel="noopener noreferrer">
+                        <div class="link-text">Fitness</div>
+                    </a>
+                </div>
+                <div class="link">
+                    <a href="http://" target="_blank" rel="noopener noreferrer">
+                        <div class="link-text">Food & Drink</div>
+                    </a>
+                </div>
+                <div class="link">
+                    <a href="http://" target="_blank" rel="noopener noreferrer">
+                        <div class="link-text">Home & Garden</div>
+                    </a>
+                </div>
+                <div class="link">
+                    <a href="http://" target="_blank" rel="noopener noreferrer">
+                        <div class="link-text">Music</div>
+                    </a>
+                </div>
+                <div class="link">
+                    <a href="http://" target="_blank" rel="noopener noreferrer">
+                        <div class="link-text">Visual Arts</div>
+                    </a>
+                </div>
+            </div>
+            <div class="language-line">
+                <div>
+                    <select class="switch-lang">
+                        <option value="af">Afrikaans</option>
+                        <option value="cs">Čeština</option>
+                        <option value="da">Dansk</option>
+                        <option value="de">Deutsch</option>
+                        <option value="el">Ελληνικά</option>
+                        <option selected disable  value="en">English</option>
+                        <option value="en-gb">English (UK)</option>
+                        <option value="es">Español (España)</option>
+                        <option value="es-la">Español</option>
+                        <option value="fi">Suomi</option>
+                        <option value="fr">Français</option>
+                        <option value="it">Italiano</option>
+                        <option value="ja">日本語</option>
+                        <option value="ko">한국어</option>
+                        <option value="nl">Nederlands</option>
+                        <option value="pt-br">Português (Brasil)</option>
+                        <option value="ru">Русский</option>
+                        <option value="zh-cn">中文(简体)</option>
+                    </select>
+                </div>
+                <div class="footer-info">
+                    © 2021 Instagram from Facebook
                 </div>
             </div>
         </div>
-    </div>
+    </footer>
 </body>
 </html>
