--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="shortcut icon" type="image/x-icon" href="./img/instagram-icon.ico">
-    <title>Meu insta</title>
+    <title>Instagram</title>
 </head>
 <body>
     <main>
